--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "18.6.1",
+    "@commitlint/config-conventional": "18.6.2",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
