--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "clean": "turbo run clean",
     "format": "prettier --write .",
     "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.1",
     "@commitlint/config-conventional": "18.6.2",
+    "del-cli": "5.1.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
