feat(toolchain/vitest-config):  add shared vitest configuration

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,7 @@ public-hoist-pattern[]='typescript'
 
 # @toolchain/eslint-config
 public-hoist-pattern[]='eslint'
+
+# @toolchain/vitest-config
+public-hoist-pattern[]='vitest'
+public-hoist-pattern[]='@vitest/coverage-v8'
