--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.11",
+    "prettier-plugin-svelte": "3.2.1",
     "turbo": "1.12.4"
   },
   "packageManager": "pnpm@8.15.3"
