feat(apps/sveltekit-example-app): use example-pkg
Use the interface and utility function in example-pkg
to build out a SvelteKit PageLoad for the default
route.

--- a/packages/example-pkg/package.json
+++ b/packages/example-pkg/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    "./subtract": "./src/index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "clean": "del .turbo dist coverage",
