--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -13,6 +13,9 @@
     "preview": "vite preview",
     "test": "vitest run"
   },
+  "dependencies": {
+    "@packages/example-pkg": "workspace:*"
+  },
   "devDependencies": {
     "@sveltejs/adapter-auto": "3.1.1",
     "@sveltejs/kit": "2.5.0",
