--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.12",
     "prettier-plugin-svelte": "3.2.1",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "turbo": "1.12.4"
   },
   "packageManager": "pnpm@8.15.3"
