--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write .",
     "lint": "turbo run lint",
     "prepare": "husky",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "type-check": "turbo run type-check"
   },
   "devDependencies": {
     "@commitlint/cli": "19.0.1",
@@ -21,5 +22,8 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "turbo": "1.12.4"
   },
-  "packageManager": "pnpm@8.15.3"
+  "packageManager": "pnpm@8.15.3",
+  "engines": {
+    "node": "20.11.x"
+  }
 }
