--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -24,8 +24,11 @@
     "@sveltejs/vite-plugin-svelte": "3.0.2",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
+    "autoprefixer": "10.4.18",
+    "postcss": "8.4.35",
     "svelte": "4.2.12",
     "svelte-check": "3.6.5",
+    "tailwindcss": "3.4.1",
     "tslib": "2.6.2",
     "vite": "5.1.4"
   }
