refactor(turborepo): rename turbo task names to remove dashes

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -8,12 +8,12 @@
     "build": "vite build",
     "check": "pnpm run code-gen && pnpm run type-check",
     "clean": "del .turbo coverage .svelte-kit .vercel",
-    "code-gen": "svelte-kit sync",
+    "codegen": "svelte-kit sync",
     "dev": "vite dev",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "type-check": "svelte-check --tsconfig ./tsconfig.json"
+    "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
     "@packages/example-pkg": "workspace:*"
