--- a/apps/sveltekit-example-app/turbo.json
+++ b/apps/sveltekit-example-app/turbo.json
@@ -4,7 +4,7 @@
     "build": {
       "outputs": [".svelte-kit/**", ".vercel/**"]
     },
-    "code-gen": {
+    "codegen": {
       "outputs": [".svelte-kit/**"]
     }
   }
