--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "turbo run lint",
     "prepare": "husky",
     "test": "turbo run test",
-    "type-check": "turbo run type-check"
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@commitlint/cli": "19.0.1",
