--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.0.1",
-    "@commitlint/config-conventional": "19.0.0",
+    "@commitlint/cli": "19.2.0",
+    "@commitlint/config-conventional": "19.1.0",
     "del-cli": "5.1.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.12",
-    "prettier-plugin-svelte": "3.2.1",
-    "prettier-plugin-tailwindcss": "0.5.11",
-    "turbo": "1.12.4"
+    "prettier-plugin-svelte": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.5.12",
+    "turbo": "1.12.5"
   },
-  "packageManager": "pnpm@8.15.3",
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
   "engines": {
     "node": "20.11.x"
   }
