feat(packages/drizzledb-pg): initial drizzle postgres database library

--- a/.prettierignore
+++ b/.prettierignore
@@ -58,6 +58,9 @@ vite.config.ts.timestamp-*
 # vercel
 .vercel/
 
+# local docker volumes
+/.docker/
+
 #-------------------------------------------------------------------------------------------------------------------
 # Prettier-specific overrides
 #-------------------------------------------------------------------------------------------------------------------
