--- a/packages/drizzledb-pg/package.json
+++ b/packages/drizzledb-pg/package.json
@@ -11,9 +11,9 @@
   },
   "scripts": {
     "clean": "del .turbo coverage",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:migrate": "node --env-file=.env --import=tsx ./src/migrate.ts",
-    "db:push": "drizzle-kit push:pg",
+    "db:generate": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs generate:pg",
+    "db:migrate": "node --import=tsx ./src/migrate.ts",
+    "db:push": "node --import=tsx ./node_modules/drizzle-kit/bin.cjs push:pg",
     "db:studio": "drizzle-kit studio",
     "lint": "eslint .",
     "test": "vitest run",
