--- a/.prettierignore
+++ b/.prettierignore
@@ -59,7 +59,7 @@ vite.config.ts.timestamp-*
 .vercel/
 
 # local docker volumes
-/.docker/
+/.docker/data
 
 #-------------------------------------------------------------------------------------------------------------------
 # Prettier-specific overrides
