--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-svelte": "2.35.1",
+    "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vitest": "0.4.0",
     "globals": "15.0.0",
     "svelte-eslint-parser": "0.33.1"
