--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -16,20 +16,24 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "@packages/example-pkg": "workspace:*"
+    "@packages/example-pkg": "workspace:*",
+    "@packages/lucia-auth": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "3.2.0",
     "@sveltejs/kit": "2.5.5",
     "@sveltejs/vite-plugin-svelte": "3.0.2",
+    "@tailwindcss/forms": "0.5.7",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
     "svelte": "4.2.12",
     "svelte-check": "3.6.9",
+    "sveltekit-superforms": "2.12.2",
     "tailwindcss": "3.4.3",
     "tslib": "2.6.2",
-    "vite": "5.2.8"
+    "vite": "5.2.8",
+    "zod": "3.22.4"
   }
 }
