refactor(packages/auth-lucia): rename package for consistency

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -16,8 +16,8 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "@packages/example-pkg": "workspace:*",
-    "@packages/lucia-auth": "workspace:*"
+    "@packages/auth-lucia": "workspace:*",
+    "@packages/example-pkg": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "3.2.0",
