--- a/packages/auth-lucia/package.json
+++ b/packages/auth-lucia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@packages/lucia-auth",
+  "name": "@packages/auth-lucia",
   "version": "0.0.0",
   "private": true,
   "description": "Lucia Auth Client",
