refactor(packages/db-drizzlepg): rename package for consistency

--- a/packages/auth-lucia/package.json
+++ b/packages/auth-lucia/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "1.0.7",
-    "@packages/drizzledb-pg": "workspace:*",
+    "@packages/db-drizzlepg": "workspace:*",
     "lucia": "3.1.1",
     "oslo": "1.2.0"
   },
