--- a/packages/ui-svelte/package.json
+++ b/packages/ui-svelte/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "bits-ui": "0.21.4",
     "clsx": "2.1.0",
+    "formsnap": "1.0.0",
     "lucide-svelte": "0.371.0",
+    "sveltekit-superforms": "2.12.5",
     "tailwind-merge": "2.2.2",
-    "tailwind-variants": "0.2.1"
+    "tailwind-variants": "0.2.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@histoire/plugin-svelte": "0.17.17",
