--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -16,11 +16,12 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "@packages/auth-lucia": "workspace:*",
-    "@packages/example-pkg": "workspace:*",
-    "@packages/ui-svelte": "workspace:*"
+    "oslo": "1.2.0"
   },
   "devDependencies": {
+    "@packages/auth-lucia": "workspace:*",
+    "@packages/example-pkg": "workspace:*",
+    "@packages/ui-svelte": "workspace:*",
     "@sveltejs/adapter-auto": "3.2.0",
     "@sveltejs/kit": "2.5.6",
     "@sveltejs/vite-plugin-svelte": "3.1.0",
