refactor(turborepo): rework turbo tasks and task dependencies
* core scripts now consist of build,clean,dev,lint,test,typecheck.
* build must run in dependencies before this package's build can run
* lint,test, and typecheck now depended on its respective build to run first
* eliminated the need for the artificial `topo` task

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -5,13 +5,10 @@
   "description": "SvelteKit Example App",
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "check": "pnpm run code-gen && pnpm run type-check",
+    "build": "svelte-kit sync",
     "clean": "del .turbo coverage .svelte-kit .vercel",
-    "codegen": "svelte-kit sync",
     "dev": "vite dev",
     "lint": "eslint .",
-    "preview": "vite preview",
     "test": "vitest run",
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
