--- a/packages/ui-svelte/package.json
+++ b/packages/ui-svelte/package.json
@@ -13,9 +13,11 @@
     "./tailwind.config.js": "./tailwind.config.js"
   },
   "scripts": {
-    "story:build": "histoire build",
-    "story:dev": "histoire dev",
-    "story:preview": "histoire preview"
+    "clean": "del .turbo coverage",
+    "dev": "histoire dev",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
     "bits-ui": "0.21.4",
@@ -37,6 +39,7 @@
     "histoire": "0.17.17",
     "postcss": "8.4.38",
     "postcss-load-config": "5.0.3",
+    "svelte-check": "3.6.9",
     "tailwindcss": "3.4.3",
     "vite": "5.2.9"
   },
