refactor(turborepo): add inputs to turbo test and typecheck tasks
No reason to run these tasks if nothing in the src folder was changed.

--- a/turbo.json
+++ b/turbo.json
@@ -12,10 +12,11 @@
     },
     "test": {
       "dependsOn": ["build"],
-      "inputs": ["./src/**/*.ts", "./src/**/*.svelte"],
+      "inputs": ["./src/**"],
       "outputs": ["./coverage/**"]
     },
     "typecheck": {
+      "inputs": ["./src/**"],
       "dependsOn": ["build"]
     }
   }
