feat(toolchain/typescript-config): all projects now extend from one of the provided profiles
* added two profiles, one for node20 and the other for svelte
* updated all projects to use one or the other profile
* updated svelte.config.js to modify generated tsconfig.json to extend shared config

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -23,6 +23,7 @@
     "@sveltejs/kit": "2.5.6",
     "@sveltejs/vite-plugin-svelte": "3.1.0",
     "@toolchain/eslint-config": "workspace:*",
+    "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
