--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   postgres:
-    build:
-      context: ./.docker
-      dockerfile: PgDockerfile
+    image: postgres:16.2-alpine
     restart: always
     environment:
       - POSTGRES_USER=postgres
