--- a/packages/ui-svelte/package.json
+++ b/packages/ui-svelte/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bits-ui": "0.21.4",
     "clsx": "2.1.0",
+    "cmdk-sv": "0.0.17",
     "formsnap": "1.0.0",
     "lucide-svelte": "0.371.0",
     "sveltekit-superforms": "2.12.5",
