--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -18,7 +18,7 @@
     "@eslint/js": "9.2.0",
     "@typescript-eslint/eslint-plugin": "7.9.0",
     "@typescript-eslint/parser": "7.9.0",
-    "eslint": "8.57.0",
+    "eslint": "9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -31,6 +31,7 @@
     "svelte-eslint-parser": "0.36.0"
   },
   "devDependencies": {
+    "@eslint/compat": "1.0.1",
     "@types/eslint": "8.56.10",
     "eslint-define-config": "2.1.0"
   }
