--- a/packages/ui-svelte/package.json
+++ b/packages/ui-svelte/package.json
@@ -19,15 +19,9 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "bits-ui": "0.21.11",
     "clsx": "2.1.1",
-    "cmdk-sv": "0.0.17",
-    "formsnap": "1.0.1",
-    "lucide-svelte": "0.399.0",
-    "sveltekit-superforms": "2.15.2",
     "tailwind-merge": "2.3.0",
-    "tailwind-variants": "0.2.1",
-    "zod": "3.23.8"
+    "tailwind-variants": "0.2.1"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "3.1.1",
