--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -26,7 +26,7 @@
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.39",
-    "svelte": "4.2.18",
+    "svelte": "5.0.0-next.172",
     "svelte-check": "3.8.4",
     "sveltekit-superforms": "2.15.2",
     "tailwindcss": "3.4.4",
