feat(packages/ui-lib-svelte): initial ui component library for svelte
This replaces packages/ui-svelte package. That package was
a standalone svelte app. This library is a SvelteKit app and
will allow for creating a more integrated component testing
app using something like KitBook or StoryBook.

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "svelte-kit sync",
-    "clean": "del .turbo coverage .svelte-kit .vercel",
+    "clean": "del .turbo coverage .svelte-kit",
     "dev": "vite dev",
     "lint": "eslint .",
     "test": "vitest run",
