--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -21,6 +21,7 @@
     "eslint": "9.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-deprecation": "3.0.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-promise": "6.4.0",
