feat(packages/db-drizzlepg): enhance env variable configuration
* removed znv in favor of straight zod
* add debugging conditionals based on environment variable
* expose all remaining database config as optional

--- a/packages/db-drizzlepg/.env.example
+++ b/packages/db-drizzlepg/.env.example
@@ -1,2 +1,5 @@
 DB_CONNECTION_STRING=postgresql://postgres:postgres@localhost:5432/postgres
+#DB_MIN_CONNECTIONS=0
+#DB_MAX_CONNECTIONS=5
+#DB_IDLE_TIMEOUT_MILLIS=2_000
 #DB_LOGGING_ENABLED=true
