--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -26,12 +26,12 @@
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
-    "svelte": "5.0.0-next.172",
+    "svelte": "5.0.0-next.195",
     "svelte-check": "3.8.4",
     "tslib": "2.6.3",
     "vite": "5.3.4"
   },
   "peerDependencies": {
-    "svelte": "^5.0.0-next.172"
+    "svelte": "5.0.0-next.195"
   }
 }
