--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35",
   "engines": {
-    "node": "20.11.x"
+    "node": ">= 20.11.x < 21.x.x"
   }
 }
