feat(toolchain/eslint-config): enable unicorn recommended rule
Except unicorn/no-null & unicorn/prevent-abbreviations

--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "svelte-kit sync",
-    "clean": "del .turbo coverage .svelte-kit",
+    "clean": "del .turbo coverage .svelte-kit build",
     "dev": "vite dev",
     "lint": "eslint .",
     "test": "vitest run",
