--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@packages/domain",
+  "name": "@packages/api",
   "version": "0.0.0",
   "private": true,
   "description": "",
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./*": "./src/*/index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "clean": "del .turbo coverage",
