--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-perfectionist": "3.1.3",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-promise": "7.1.0",
     "eslint-plugin-svelte": "2.43.0",
     "eslint-plugin-unicorn": "55.0.0",
