feat(packages/api): move user sign-up under api
Initial work to move sign-up logic out of
SvelteKit app and into API package using
Hono and a typed RPC client.

--- a/packages/auth-lucia/package.json
+++ b/packages/auth-lucia/package.json
@@ -6,8 +6,7 @@
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./repository": "./src/repository/index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "clean": "del .turbo coverage",
