--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -20,7 +20,7 @@
     "pg": "8.12.0"
   },
   "devDependencies": {
-    "@packages/auth-lucia": "workspace:*",
+    "@packages/api": "workspace:*",
     "@sveltejs/adapter-node": "5.2.2",
     "@sveltejs/kit": "2.5.22",
     "@sveltejs/vite-plugin-svelte": "3.1.1",
@@ -28,6 +28,7 @@
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.20",
+    "http-status-codes": "2.3.0",
     "postcss": "8.4.41",
     "svelte": "5.0.0-next.222",
     "svelte-check": "3.8.5",
