--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,13 +6,22 @@
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./client": "./src/client/index.ts"
   },
   "scripts": {
     "clean": "del .turbo coverage",
     "lint": "eslint .",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@hono/zod-validator": "0.2.2",
+    "@packages/auth-lucia": "workspace:*",
+    "@packages/db-drizzlepg": "workspace:*",
+    "hono": "4.5.5",
+    "oslo": "1.2.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
