chore(monorepo): update monorepo and workspace dependencies to latest
Includes cleanup to remove @types/node from
the packages that were declaring it but not
using it.

--- a/packages/example-pkg/package.json
+++ b/packages/example-pkg/package.json
@@ -17,7 +17,6 @@
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
-    "@toolchain/vitest-config": "workspace:*",
-    "@types/node": "22.3.0"
+    "@toolchain/vitest-config": "workspace:*"
   }
 }
