--- a/packages/example-pkg/tsconfig.json
+++ b/packages/example-pkg/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "./node_modules/@toolchain/typescript-config/tsconfig-node20.json",
   "compilerOptions": {
-    "types": ["node", "vitest/globals"]
+    "types": ["vitest/globals"]
   }
 }
