--- a/packages/db-drizzlepg/package.json
+++ b/packages/db-drizzlepg/package.json
@@ -22,6 +22,7 @@
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
     "pg": "8.12.0",
+    "sql-formatter": "15.4.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
