--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -22,20 +22,20 @@
   "devDependencies": {
     "@packages/api": "workspace:*",
     "@sveltejs/adapter-node": "5.2.2",
-    "@sveltejs/kit": "2.5.25",
-    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@sveltejs/kit": "2.5.26",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.20",
     "http-status-codes": "2.3.0",
-    "postcss": "8.4.44",
-    "svelte": "5.0.0-next.243",
-    "svelte-check": "4.0.0",
+    "postcss": "8.4.45",
+    "svelte": "5.0.0-next.244",
+    "svelte-check": "4.0.1",
     "sveltekit-superforms": "2.17.0",
     "tailwindcss": "3.4.10",
     "tslib": "2.7.0",
-    "vite": "5.4.3",
+    "vite": "5.4.4",
     "zod": "3.23.8"
   }
 }
