--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -21,17 +21,17 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "3.2.4",
-    "@sveltejs/kit": "2.5.25",
-    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@sveltejs/kit": "2.5.26",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
-    "svelte": "5.0.0-next.243",
-    "svelte-check": "4.0.0",
+    "svelte": "5.0.0-next.244",
+    "svelte-check": "4.0.1",
     "tslib": "2.7.0",
-    "vite": "5.4.3"
+    "vite": "5.4.4"
   },
   "peerDependencies": {
-    "svelte": "5.0.0-next.243"
+    "svelte": "5.0.0-next.244"
   }
 }
