--- a/toolchain/typescript-config/tsconfig-node20.json
+++ b/toolchain/typescript-config/tsconfig-node20.json
@@ -14,7 +14,7 @@
 
     /* Modules */
     "module": "NodeNext",                             /* Specify what module code is generated. */
-    "moduleResolution": "NodeNext"                   /* Specify how TypeScript looks up a file from a given module specifier. */
+    "moduleResolution": "NodeNext"                    /* Specify how TypeScript looks up a file from a given module specifier. */
   },
-  "include": ["../../../src/**/*.ts"]
+  "include": ["${configDir}/src/**/*.ts"]
 }
