refactor(monorepo): change name of composite action
Small change to update the name of the
composite action from `install` to
`prepare`. The name better reflects what the
composite action does.

--- a/.github/composite-actions/prepare/action.yml
+++ b/.github/composite-actions/prepare/action.yml
@@ -1,5 +1,5 @@
-name: 'Install'
-description: 'Sets up Node, and installs dependencies'
+name: Prepare
+description: Prepares the repo for a typical CI job
 
 runs:
   using: composite
