feat(monorepo): add one-version, a strict dependency conformance tool for monorepos
This tool ensures that all workspaces in
your monorepo are using the same version of
a dependency, and also enforce strict
versioning strategy to ensure that all
dependencies are pinned to an exact
version.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "turbo run clean",
     "format": "prettier --write .",
     "lint": "turbo run lint",
+    "one-version:check": "one-version check",
     "prepare": "husky",
     "test": "turbo run test",
     "typecheck": "turbo run typecheck"
@@ -17,6 +18,7 @@
     "del-cli": "5.1.0",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
+    "one-version": "0.2.0",
     "prettier": "3.3.3",
     "prettier-plugin-packagejson": "2.5.2",
     "prettier-plugin-svelte": "3.2.6",
