feat(monorepo): add one-version, a strict dependency conformance tool for monorepos
This tool ensures that all workspaces in
your monorepo are using the same version of
a dependency, and also enforce strict
versioning strategy to ensure that all
dependencies are pinned to an exact
version.

--- a/.github/workflows/one-version-check.yml
+++ b/.github/workflows/one-version-check.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Prepare
         uses: ./.github/composite-actions/prepare
 
-      - name: Run one version check
-        run: pnpm run lint
+      - name: Run One Version check
+        run: pnpm run one-version:check
