--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -14,10 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get base depth
+        id: base-depth
+        run: echo "base-depth=$(expr ${{ github.event.pull_request.commits }} + 1)"
       - name: Check out code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: ${{ steps.base-depth.outputs.base-depth }}
 
       - name: Prepare
         uses: ./.github/composite-actions/prepare
