--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -13,7 +13,7 @@ jobs:
     name: ESLint
     runs-on: ubuntu-latest
     env:
-      TURBO_SCM_HEAD: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event.before }}
+      TURBO_SCM_BASE: origin/$GITHUB_BASE_REF
 
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
