--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
         with:
-          fetch-depth: ${{ steps.base-depth.outputs.base-depth }}
+          fetch-depth: 0
 
       - name: Prepare
         uses: ./.github/composite-actions/prepare
