--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -13,7 +13,7 @@ jobs:
     name: ESLint
     runs-on: ubuntu-latest
     env:
-      TURBO_SCM_BASE: ${{ github.base_ref }}
+      TURBO_SCM_BASE: origin/${{ github.base_ref }}
 
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -36,7 +36,7 @@ jobs:
         run: pnpm exec turbo ls --affected
 
       - name: Run ESLint check
-        run: pnpm run lint
+        run: pnpm exec turno run lint --affected
 
   type-check:
     name: Type Check
