--- a/apps/sveltekit-example-app/package.json
+++ b/apps/sveltekit-example-app/package.json
@@ -21,21 +21,21 @@
   },
   "devDependencies": {
     "@packages/api": "workspace:*",
-    "@sveltejs/adapter-node": "5.2.5",
-    "@sveltejs/kit": "2.6.3",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+    "@sveltejs/adapter-node": "5.2.8",
+    "@sveltejs/kit": "2.7.2",
+    "@sveltejs/vite-plugin-svelte": "4.0.0",
     "@toolchain/eslint-config": "workspace:*",
     "@toolchain/typescript-config": "workspace:*",
     "@toolchain/vitest-config": "workspace:*",
     "autoprefixer": "10.4.20",
     "http-status-codes": "2.3.0",
     "postcss": "8.4.47",
-    "svelte": "5.0.0-next.262",
-    "svelte-check": "4.0.4",
-    "sveltekit-superforms": "2.19.1",
-    "tailwindcss": "3.4.13",
-    "tslib": "2.7.0",
-    "vite": "5.4.8",
+    "svelte": "5.0.4",
+    "svelte-check": "4.0.5",
+    "sveltekit-superforms": "2.20.0",
+    "tailwindcss": "3.4.14",
+    "tslib": "2.8.0",
+    "vite": "5.4.9",
     "zod": "3.23.8"
   }
 }
