feat(/apps/sveltekit-example-app): upgrade tailwindcss to v4.0 beta
There is a temp workaround to get code
Auto-Complete and Quick Documentation
working by manually installing the latest
version of @tailwindcss/language-server to
the root package.json.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
+    "@tailwindcss/language-server": "0.0.27",
     "del-cli": "6.0.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
