feat(monorepo): add pnpm duplicate dependencies check to monorepo-health.yml workflow

--- a/.github/workflows/monorepo-health.yml
+++ b/.github/workflows/monorepo-health.yml
@@ -16,3 +16,6 @@ jobs:
 
       - name: Run One Version check
         run: pnpm run one-version:check
+
+      - name: Check for Duplicate Dependencies
+        run: pnpm dedupe --check
