refactor(toolchain/typescript-config): rename config file to node22
The minimum version of Node.js this
project supports is now Node22. There is
no changes to the config, so just renaming
the file to match the default.

--- a/apps/hono-node-app/tsconfig.json
+++ b/apps/hono-node-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@toolchain/typescript-config/tsconfig-node20.json",
+  "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
     "types": ["vitest/globals"]
   }
