--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@toolchain/typescript-config/tsconfig-node20.json",
+  "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
     "types": ["vitest/globals"]
   }
