feat(packages/db-drizzlepg): add 'effectful' drizzle client
checkpoint
* add database live impl
* update env vars
* reorg files

--- a/packages/api-impl/package.json
+++ b/packages/api-impl/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@effect/platform": "0.80.15",
+    "@packages/db-drizzlepg": "workspace:*",
     "effect": "3.14.15"
   },
   "devDependencies": {
