feat(packages/db-drizzlepg): add 'effectful' drizzle client
checkpoint
* add retry handling
* add live layers

--- a/apps/effect-api-server/package.json
+++ b/apps/effect-api-server/package.json
@@ -17,6 +17,7 @@
     "@effect/platform-node": "0.77.3",
     "@packages/api": "workspace:*",
     "@packages/api-impl": "workspace:*",
+    "@packages/db-drizzlepg": "workspace:*",
     "effect": "3.14.15"
   },
   "devDependencies": {
