--- a/packages/api-impl/package.json
+++ b/packages/api-impl/package.json
@@ -6,7 +6,8 @@
   "license": "UNLICENSED",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./services": "./src/services/index.ts"
   },
   "scripts": {
     "clean": "del .turbo coverage",
