feat(monorepo): add and enable effect's language server extension
see https://github.com/Effect-TS/language-service

--- a/apps/effect-api-server/tsconfig.json
+++ b/apps/effect-api-server/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals"],
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ]
   }
 }
