--- a/packages/learn-effect/tsconfig.json
+++ b/packages/learn-effect/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@toolchain/typescript-config/tsconfig-node22.json",
   "compilerOptions": {
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals"],
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ]
   }
 }
