feat(packages/ui-lib-svelte): add shadcn configuration
- Added `button` component

--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -6,10 +6,11 @@
   ],
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./src/index.ts",
-      "svelte": "./src/index.ts"
-    }
+    "./components/ui/*": {
+      "types": "./src/lib/components/ui/*/index.ts",
+      "svelte": "./src/lib/components/ui/*/index.ts"
+    },
+    "./styles/*": "./src/styles/*"
   },
   "scripts": {
     "build": "svelte-kit sync",
@@ -20,6 +21,7 @@
     "typecheck": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@lucide/svelte": "0.526.0",
     "@sveltejs/adapter-auto": "6.0.1",
     "@sveltejs/kit": "2.26.1",
     "@sveltejs/vite-plugin-svelte": "6.1.0",
@@ -34,6 +36,7 @@
     "tailwind-merge": "3.3.1",
     "tailwind-variants": "1.0.0",
     "tailwindcss": "4.1.11",
+    "tw-animate-css": "1.3.6",
     "vite": "7.0.6"
   }
 }
