feat(packages/ui-lib-svelte): add toaster component

--- a/packages/ui-lib-svelte/package.json
+++ b/packages/ui-lib-svelte/package.json
@@ -31,8 +31,10 @@
     "@toolchain/vitest-config": "workspace:*",
     "bits-ui": "2.8.13",
     "clsx": "2.1.1",
+    "mode-watcher": "1.1.0",
     "svelte": "5.37.0",
     "svelte-check": "4.3.0",
+    "svelte-sonner": "1.0.5",
     "tailwind-merge": "3.3.1",
     "tailwind-variants": "1.0.0",
     "tailwindcss": "4.1.11",
