fix(apps/ha-dashboard): update environment variable names

--- a/apps/ha-dashboard/.env.example
+++ b/apps/ha-dashboard/.env.example
@@ -1,2 +1,2 @@
-HOMEASSISTANT_BASE_URI=http://homeassistant.local:8123
-HOMEASSISTANT_TOKEN=
+HOME_ASSISTANT_BASE_URI=http://homeassistant.local:8123
+HOME_ASSISTANT_TOKEN=
